--- a/src/ResourceManager/DataFactoryV2/Commands.DataFactoryV2.Test/Commands.DataFactoryV2.Test.Netcore.csproj
+++ b/src/ResourceManager/DataFactoryV2/Commands.DataFactoryV2.Test/Commands.DataFactoryV2.Test.Netcore.csproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Management.DataFactory" Version="0.6.0-preview" />
+    <PackageReference Include="Microsoft.Azure.Management.DataFactory" Version="1.0.0" />
     <PackageReference Include="Microsoft.DataTransfer.Gateway.Encryption" Version="3.4.6604.1" />
   </ItemGroup>
 
