--- a/src/ResourceManager/DataFactoryV2/Commands.DataFactoryV2/Commands.DataFactoryV2.Netcore.csproj
+++ b/src/ResourceManager/DataFactoryV2/Commands.DataFactoryV2/Commands.DataFactoryV2.Netcore.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Management.DataFactory" Version="0.8.0-preview" />
+    <PackageReference Include="Microsoft.Azure.Management.DataFactory" Version="1.0.0" />
     <PackageReference Include="Microsoft.DataTransfer.Gateway.Encryption" Version="3.4.6604.1" />
   </ItemGroup>
 
